Fix html overflow to allow scrolling up with links

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -54,9 +54,8 @@
   font-size: 16px;
   font-family: var(--ff-primary);
 }
-
 body,
 html {
   max-width: 100vw;
-  overflow-x: hidden;
+  overflow-x: clip;
 }
